--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           GITCOMMITNAME=$(git rev-parse --short HEAD)
           DOCKERTAG=$(git describe --tags)
-          title="react-strix auto comment"
+          title="react-sgh auto comment"
           body="on commit $GITCOMMITNAME  storybook: https://react-sgh-$GITCOMMITNAME.surge.sh "
           labels='workflow'
           json=$(jq -nc --arg l "$labels" --arg t "$title" --arg b "$body" '$l | split(", ") | {title: $t, body: $b, labels: .}')
