--- a/.github/workflows/fandogh.yml
+++ b/.github/workflows/fandogh.yml
@@ -18,7 +18,7 @@ jobs:
           pip install fandogh_cli --upgrade
       - name: Lint with flake8
         env:
-          FONDOGH_USERNAME: sina.ghadri.co
+          FONDOGH_USERNAME: ${{secrets.FONDOGH_USERNAME  }}
           FONDOGH_PASSWORD: ${{secrets.FONDOGH_PASSWORD  }}
         run: |
           fandogh login --username $FONDOGH_USERNAME --password $FANDOGH_PASSWORD
